<resources>
    <string name="app_name">Japan Quiz</string>
    <!-- Header Text -->
    <string name="heading_text">How well do you know Japan?</string>

    <!-- Sub header text -->
    <string name="subheading_text">Let\'s aim for 100 points!</string>

    <!-- Question text for #1 -->
    <string name="question_text_q1">Q1. What is the capital city of Japan? (10p)</string>

    <!-- Hint text for the EdtText of Question 1 -->
    <string name="hint_text_q1">Enter here</string>

    <!-- Question text for #2 -->
    <string name="question_text_q2">Q2. How many prefectures are there in Japan? (10p)</string>

    <!-- Answer text 1 for Q2 -->
    <string name="answer_text1_q2">47</string>

    <!-- Answer text 2 for Q2 -->
    <string name="answer_text2_q2">46</string>

    <!-- Answer text 3 for Q2 -->
    <string name="answer_text3_q2">45</string>

    <!-- Question text for #3 -->
    <string name="question_text_q3">Q3. Which followings are used to greet after and before the meal in Japan? (30p)</string>

    <!-- Answer text 1 for Q3 -->
    <string name="answer_text1_q3">Gochisousama</string>

    <!-- Answer text 2 for Q3 -->
    <string name="answer_text2_q3">Sayonara</string>

    <!-- Answer text 3 for Q3 -->
    <string name="answer_text3_q3">Itadakimasu</string>

    <!-- Question text for #4 -->
    <string name="question_text_q4">Q4. Which following is the largest lake in Japan? (20p)</string>

    <!-- Answer text 1 for Q4 -->
    <string name="answer_text1_q4">Lake Niwa</string>

    <!-- Answer text 2 for Q4 -->
    <string name="answer_text2_q4">Lake Hiwa</string>

    <!-- Answer text 3 for Q4 -->
    <string name="answer_text3_q4">Lake Biwa</string>

    <!-- Question text for #5 -->
    <string name="question_text_q5">Q5. Which followings were capital in the history of Japan? (30p)</string>

    <!-- Answer text 1 for Q5 -->
    <string name="answer_text1_q5">Nara</string>

    <!-- Answer text 2 for Q5 -->
    <string name="answer_text2_q5">Kyoto</string>

    <!-- Answer text 3 for Q5 -->
    <string name="answer_text3_q5">Osaka</string>

    <!-- Text for Button to see the result -->
    <string name="see_result_button_text">See Result</string>
</resources>