<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/root_relative_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/heading_text"
                    android:textColor="@color/custom_blue"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/subheading_text"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView style="@style/QuestionCardViewStyle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        style="@style/QuestionTextView"
                        android:text="@string/question_text_q1" />

                    <ImageView
                        android:layout_width="240dp"
                        android:layout_height="135dp"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="centerCrop"
                        android:src="@drawable/japan" />

                    <EditText
                        android:id="@+id/question1_editText_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:backgroundTint="@color/custom_blue"
                        android:hint="@string/hint_text_q1"
                        android:inputType="textCapWords"
                        android:textCursorDrawable="@drawable/cursor_blue" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView style="@style/QuestionCardViewStyle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        style="@style/QuestionTextView"
                        android:text="@string/question_text_q2" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/question2_radio_correct"
                            style="@style/AnswerViewStyle"
                            android:background="@drawable/bg_border_blue"
                            android:text="@string/answer_text1_q2" />

                        <RadioButton
                            style="@style/AnswerViewStyle"
                            android:background="@drawable/bg_border_blue"
                            android:text="@string/answer_text2_q2" />

                        <RadioButton
                            style="@style/AnswerViewLastStyle"
                            android:background="@drawable/bg_border_blue"
                            android:text="@string/answer_text3_q2" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView style="@style/QuestionCardViewStyle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        style="@style/QuestionTextView"
                        android:text="@string/question_text_q3" />

                    <CheckBox
                        android:id="@+id/question3_checkbox1"
                        style="@style/AnswerViewStyle"
                        android:background="@drawable/bg_border_blue"
                        android:text="@string/answer_text1_q3" />

                    <CheckBox
                        android:id="@+id/question3_checkbox2"
                        style="@style/AnswerViewStyle"
                        android:background="@drawable/bg_border_blue"
                        android:text="@string/answer_text2_q3" />

                    <CheckBox
                        android:id="@+id/question3_checkbox3"
                        style="@style/AnswerViewLastStyle"
                        android:background="@drawable/bg_border_blue"
                        android:text="@string/answer_text3_q3" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView style="@style/QuestionCardViewStyle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        style="@style/QuestionTextView"
                        android:text="@string/question_text_q4" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            style="@style/AnswerViewStyle"
                            android:background="@drawable/bg_border_blue"
                            android:text="@string/answer_text1_q4" />

                        <RadioButton
                            style="@style/AnswerViewStyle"
                            android:background="@drawable/bg_border_blue"
                            android:text="@string/answer_text2_q4" />

                        <RadioButton
                            android:id="@+id/question4_radio_correct"
                            style="@style/AnswerViewLastStyle"
                            android:background="@drawable/bg_border_blue"
                            android:text="@string/answer_text3_q4" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView style="@style/QuestionCardViewStyle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        style="@style/QuestionTextView"
                        android:text="@string/question_text_q5" />

                    <CheckBox
                        android:id="@+id/question5_checkbox1"
                        style="@style/AnswerViewStyle"
                        android:background="@drawable/bg_border_blue"
                        android:text="@string/answer_text1_q5" />

                    <CheckBox
                        android:id="@+id/question5_checkbox2"
                        style="@style/AnswerViewStyle"
                        android:background="@drawable/bg_border_blue"
                        android:text="@string/answer_text2_q5" />

                    <CheckBox
                        android:id="@+id/question5_checkbox3"
                        style="@style/AnswerViewLastStyle"
                        android:background="@drawable/bg_border_blue"
                        android:text="@string/answer_text3_q5" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:onClick="displayResult"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/see_result_button_text"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>